<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AlmoxarifadoActivity">

    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nome_do_item"
        android:minHeight="48dp"
        android:inputType=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/itemQuantityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/quantidade_do_item"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dictionaryItems"
        android:text="@string/adicionar_item"
        tools:ignore="OnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar_itens"
        android:onClick="listarItens" />

    <TextView
        android:id="@+id/stockTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Itens em Estoque"
        tools:ignore="HardcodedText" />

</LinearLayout>
